Add swagger upate and delete
